# Amgcl.Net

./: .gitignore  README.md
lib/: README.md
src/AmgclNative/: CMakeLists.txt
src/AmgclSharp/: Amg.cs  NativeMethods.cs
src/AmgclTest/: AmgclTest.csproj  Program.cs
